--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,12 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".services.AlarmReceiver"/>
+        <service
+            android:process=":notification_process"
+            android:name=".services.NotificationService" />
+
+        <receiver android:name=".receivers.AlarmReceiver"/>
+
     </application>
 
 </manifest>
