Feature/scheduled notifications (#2)
* Notification demo

* Notification demo

* Notification fix main

* Notification fix main

* Notification service started

* Notification service finished

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:process=":notification_process"
+            android:name=".services.NotificationService" />
+
+        <receiver android:name=".receivers.AlarmReceiver"/>
+
     </application>
 
 </manifest>
