--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cpe.brutus">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,10 +20,20 @@
         </activity>
 
         <service
-            android:process=":notification_process"
-            android:name=".services.NotificationService" />
+            android:name=".services.NotificationService"
+            android:enabled="true"/>
+
+        <service
+            android:name=".services.TestService"
+            android:enabled="true"/>
 
         <receiver android:name=".receivers.AlarmReceiver"/>
+
+        <receiver android:name=".receivers.OnBootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
 
     </application>
 
